# txt_mining

./: README.md  pyproject.toml  requirements.txt
src/: app.py  nightley_sns_data_tokenized.csv  visualization.py  widget.py
tests/: test_cityinsight_textmining.py
