[tool.poetry]
name = "cityinsight-textmining"
version = "0.1.0"
description = ""
authors = ["Ryosuke <cincodemayor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
